# todo-pri

./: .env.example  .envrc  .gitignore  CLAUDE.example.md  README.md  mypy.ini  pyproject.toml  settings.local.example.json
.claude/agents/: angular_test_engineer.md  fastapi_reviewer.md  fastapi_service_coder.md  planner.md
.claude/commands/: acp.md  dev-flow.md
.claude/rules/general/: editing.md
.claude/rules/programming-languages/: python.md
.claude/rules/techs/: git-commit-messages.md  git.md
.claude/to-do/: .gitignore  config  todo.txt
agents/: README.md  angular_component_coder.md  angular_reviewer.md  angular_service_coder.md  fastapi_endpoint_coder.md  fastapi_test_designer.md  fastapi_test_engineer.md  shell_script_utils_coder.md
commands/: dev-flow.md
rules/general/: coding-standards.md  development-workflow.md  documentation.md  instructions.md
src/todo_pri/: __init__.py  app.py  google_llm.py  llm.py  main.py  model.py  openai_llm.py  prompt.py  prompt_header.md  sample_prompt.md  scorer.py  writer.py
tests/: conftest.py  test_llm.py  test_main.py  test_parser.py  test_scorer.py  test_writer.py
to-do/: todo.txt
todo_cli/: __init__.py  main.py  parser.py
