[project]
name = "todo-pri"
version = "0.1.0"
description = "CLI tool to prioritize todo.txt tasks via LLM scoring"
requires-python = ">=3.11"
dependencies = ["typer>=0.24.1"]

[project.optional-dependencies]
dev = ["build>=1.4.3", "pytest>=9.0.3", "ruff>=0.15.1", "mypy>=1.20.1"]

[project.scripts]
todo-pri = "todo_pri.main:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["todo_pri*"]
exclude = ["tests*", "dev-flow*"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
